--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,6 @@ jobs:
           python server.py &
           echo "Waiting for Flask server to start"
           sleep 30
+      - name : Run Locust with part A configuration
+        run :
+          locust --headless --host http://127.0.0.1:5000 --users 10000 --spawn-rate 100 SimpleUser
